<resources>
    <string name="app_name">Журнал</string>
    <string name="loading">Загрузка..</string>
    <string name="e_journal">ЭЛЕКТРОННЫЙ ЖУРНАЛ</string>
    <string name="chemk">МЦК - ЧЭМК</string>
    <string name="login">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="forget_pass">не можете войти?</string>
    <string name="enter">ВОЙТИ</string>
    <string name="news">Новости</string>
    <string name="journal">Журнал</string>
    <string name="home">Расписание</string>
    <string name="messenger">Связь</string>
    <string name="profile">Профиль</string>
    <string name="office_number">201М</string>
    <string name="admin_phone">8(800)555-35-35</string>
    <string name="title">Заголовок</string>
    <string name="body">Основная информация</string>
    <string name="moreInfo">Подробнее..</string>
    <string name="date">Опубликовано</string>
    <string name="WrongData">Неверные данные</string>
    <string name="group">Группа</string>
    <string name="course">Курс</string>
    <string name="status">Статус</string>
    <string name="formEdu">Форма обучения</string>
    <string name="email">Эл. почта</string>
    <string name="editData">Изменить данные</string>
    <string name="saveChanges">Сохранить изменения</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="checkSchedule">Просмотр расписания</string>
    <string name="subject">Предмет</string>
    <string name="teacher">Преподаватель</string>
    <string name="classroom">Кабинет</string>
    <string name="week">Неделя</string>
    <string name="tomorrow">Завтра</string>
    <string name="today">Сегодня</string>
    <string name="period">Период</string>
    <string name="day">День</string>
    <string name="mark">Оценка</string>
    <string name="show_journal">Отобразить журнал</string>
    <string name="contacts">Контактная информация</string>
    <string name="location">Местонахождение (юридический адрес)</string>
    <string name="locationText">428000, Чувашская Республика, г. Чебоксары, проспект Ленина, дом 9</string>
    <string name="reception">Приёмная директора</string>
    <string name="receptionText">тел./факс (8352) 22-43-83</string>
    <string name="address">Фактический адрес и контакты</string>
    <string name="workMode">Режим и график работы</string>
    <string name="campus1">1 корпус</string>
    <string name="campus2">2 корпус</string>
    <string name="campus3">3 корпус</string>
    <string name="campus4">4 корпус</string>
    <string name="campus5">5 корпус</string>
    <string name="hostels">Общежития</string>
    <string name="hostel1">Общежитие №1</string>
    <string name="hostel2">Общежитие №2</string>
    <string name="downloadWorkMode">Открыть режим и график работы</string>

</resources>