<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".screens.main.MessengerFragment"
android:background="@color/mainBackgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:textStyle="bold"
            android:textSize="@dimen/maintext_size"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textStyle="bold"
            android:textSize="@dimen/body_size"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contacts"/>

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationText"
            android:textStyle="italic"
            android:textSize="@dimen/bottext_size"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location"/>

        <TextView
            android:id="@+id/reception"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reception"
            android:textStyle="bold"
            android:textSize="@dimen/body_size"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/locationText"/>

        <TextView
            android:id="@+id/receptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receptionText"
            android:textStyle="italic"
            android:textSize="@dimen/bottext_size"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reception"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold"
            android:textSize="@dimen/body_size"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/receptionText" />

        <Space
            android:id="@+id/spaceM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf = "@id/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/campus1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/roundedcorners_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/campus1"
            android:textColor="@color/black"
            android:textSize="@dimen/body_size"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/address"
            app:layout_constraintStart_toStartOf="@id/address"
            app:layout_constraintEnd_toStartOf="@id/spaceM"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/campus2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/roundedcorners_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/campus2"
            android:textColor="@color/black"
            android:textSize="@dimen/body_size"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/address"
            app:layout_constraintEnd_toEndOf="@id/address"
            app:layout_constraintStart_toEndOf="@id/spaceM"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/campus3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/roundedcorners_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/campus3"
            android:textColor="@color/black"
            android:textSize="@dimen/body_size"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/campus1"
            app:layout_constraintStart_toStartOf="@id/address"
            app:layout_constraintEnd_toStartOf="@id/spaceM"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/campus4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/roundedcorners_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/campus4"
            android:textColor="@color/black"
            android:textSize="@dimen/body_size"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/campus2"
            app:layout_constraintEnd_toEndOf="@id/address"
            app:layout_constraintStart_toEndOf="@id/spaceM"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/campus5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/roundedcorners_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/campus5"
            android:textColor="@color/black"
            android:textSize="@dimen/body_size"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@id/campus3"
            app:layout_constraintStart_toStartOf="@id/campus3"
            app:layout_constraintEnd_toEndOf="@id/campus4"/>

        <TextView
            android:id="@+id/hostelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hostels"
            android:textStyle="bold"
            android:textSize="@dimen/body_size"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/campus5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hostel1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcorners_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/hostel1"
            android:textColor="@color/black"
            android:textSize="@dimen/body_size"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="@id/campus1"
            app:layout_constraintTop_toBottomOf="@id/hostelTV"
            app:layout_constraintEnd_toEndOf="@id/spaceM" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hostel2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcorners_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/hostel2"
            android:textColor="@color/black"
            android:textSize="@dimen/body_size"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@id/spaceM"
            app:layout_constraintTop_toBottomOf="@id/hostelTV"
            app:layout_constraintEnd_toEndOf="@id/campus4" />

        <TextView
            android:id="@+id/workMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workMode"
            android:textStyle="bold"
            android:textSize="@dimen/body_size"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/hostel1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/workModeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/roundedcorners_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/downloadWorkMode"
            android:textColor="@color/black"
            android:textSize="@dimen/body_size"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_goneMarginBottom="20dp"
            app:layout_constraintStart_toStartOf="@id/hostel1"
            app:layout_constraintEnd_toEndOf="@id/hostel2"
            app:layout_constraintTop_toBottomOf="@id/workMode"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>