<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/subject"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/subject"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:textSize="@dimen/maintext_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/teacher" />

        <TextView
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/teacher"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:layout_marginEnd="5dp"
            android:maxLines="8"
            android:ellipsize="end"
            android:text="@string/teacher"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/body_size"
            app:layout_constraintTop_toTopOf="@id/subject"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:textColor="@color/black"
            android:id="@+id/classRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classroom"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="@dimen/body_size"
            app:layout_constraintTop_toBottomOf="@id/teacher"
            app:layout_constraintEnd_toEndOf="@id/teacher"
            app:layout_constraintStart_toStartOf="@id/teacher"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>